--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "register-service-worker": "^1.7.2",
     "vue": "2.7.14",
     "vue-document-editor": "1.5.1",
+    "vue-file-toolbar-menu": "1.5.0",
     "vue-router": "3.6.5",
     "vuex": "3.6.2"
   },
