--- a/.github/workflows/cbd.yml
+++ b/.github/workflows/cbd.yml
@@ -15,5 +15,5 @@ jobs:
       - name: DeployGP
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.CI/GITHUB_TOKEN }}
           publish_dir: ./dist
